<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.pokemons.details.DetailsPokemonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsHeaderLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/grass2"
        app:layout_constraintBottom_toTopOf="@+id/detailsContentLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/detailsHeaderImageView"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:contentDescription="@string/image_pokemon_on_grass_content"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/detailsContentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/secondLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_pokemon_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detailsNamePokemonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Pikachu" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_pokemon_height"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detailsHeightPokemonTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="1.09 m" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/details_pokemon_weight"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detailsWeightPokemonTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="19.0 kg" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_pokemon_weaknesses"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detailsWeaknessesPokemonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Fire" />
        </LinearLayout>

        <ImageView
            android:id="@+id/detailsImagePokemonImageView"
            android:layout_width="320dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_pokemon_pokedex_content"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailsPokeballLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/detailsHeaderLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/pokeball_image_content"
            android:src="@drawable/pokebola2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/details_use_your_pokeball"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>